--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/express": "^4.16.0",
 		"@types/react": "^16.4.14",
 		"@types/react-dom": "^16.0.7",
 		"@types/react-redux": "^6.0.9",
