--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
 		"@types/react-dom": "^16.0.7",
 		"@types/react-redux": "^6.0.9",
 		"@types/react-router-dom": "^4.3.1",
+		"@types/redux-thunk": "^2.1.0",
 		"autoprefixer": "^9.1.5",
 		"awesome-typescript-loader": "^5.2.1",
 		"axios": "^0.18.0",
