--- a/server/package.json
+++ b/server/package.json
@@ -13,43 +13,43 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/express": "^4.16.1",
-		"@types/react": "^16.8.13",
-		"@types/react-dom": "^16.8.3",
-		"@types/react-redux": "^6.0.14",
-		"@types/react-router-dom": "^4.3.1",
+		"@types/express": "^4.17.2",
+		"@types/react": "^16.9.17",
+		"@types/react-dom": "^16.9.4",
+		"@types/react-redux": "^7.1.5",
+		"@types/react-router-dom": "^5.1.3",
 		"@types/redux-thunk": "^2.1.0",
-		"autoprefixer": "^9.5.1",
+		"autoprefixer": "^9.7.3",
 		"awesome-typescript-loader": "^5.2.1",
-		"axios": "^0.18.0",
+		"axios": "^0.19.1",
 		"compression": "^1.7.4",
-		"concurrently": "^4.1.0",
-		"css-loader": "^1.0.1",
-		"es6-promise": "^4.2.6",
-		"express": "^4.16.4",
-		"express-http-proxy": "^1.5.1",
+		"concurrently": "^5.0.2",
+		"css-loader": "^3.4.2",
+		"es6-promise": "^4.2.8",
+		"express": "^4.17.1",
+		"express-http-proxy": "^1.6.0",
 		"extract-loader": "^3.1.0",
-		"file-loader": "^2.0.0",
-		"lodash": "^4.17.11",
-		"node-sass": "^4.11.0",
-		"nodemon": "^1.18.11",
+		"file-loader": "^5.0.2",
+		"lodash": "^4.17.15",
+		"node-sass": "^4.13.0",
+		"nodemon": "^2.0.2",
 		"npm-run-all": "^4.1.5",
 		"postcss-loader": "^3.0.0",
-		"react": "^16.8.6",
-		"react-dom": "^16.8.6",
-		"react-helmet": "^5.2.0",
-		"react-redux": "^5.1.1",
-		"react-router-config": "^1.0.0-beta.4",
-		"react-router-dom": "^4.3.1",
-		"redux": "^4.0.1",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-helmet": "^5.2.1",
+		"react-redux": "^7.1.3",
+		"react-router-config": "^5.1.1",
+		"react-router-dom": "^5.1.2",
+		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
-		"serialize-javascript": "^1.6.1",
+		"serialize-javascript": "^2.1.2",
 		"source-map-loader": "^0.2.4",
-		"style-loader": "^0.23.1",
-		"typescript": "^3.4.2",
-		"webpack": "^4.29.6",
-		"webpack-cli": "^3.3.0",
-		"webpack-dev-server": "^3.3.0",
+		"style-loader": "^1.1.2",
+		"typescript": "^3.7.4",
+		"webpack": "^4.41.5",
+		"webpack-cli": "^3.3.10",
+		"webpack-dev-server": "^3.10.1",
 		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
