--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,10 @@
 		"@types/express": "^4.17.2",
 		"@types/react": "^16.9.17",
 		"@types/react-dom": "^16.9.4",
-		"@types/react-redux": "^7.1.5",
+		"@types/react-redux": "^7.1.6",
 		"@types/react-router-dom": "^5.1.3",
 		"@types/redux-thunk": "^2.1.0",
-		"autoprefixer": "^9.7.3",
+		"autoprefixer": "^9.7.4",
 		"awesome-typescript-loader": "^5.2.1",
 		"axios": "^0.19.1",
 		"compression": "^1.7.4",
@@ -31,7 +31,7 @@
 		"extract-loader": "^3.1.0",
 		"file-loader": "^5.0.2",
 		"lodash": "^4.17.15",
-		"node-sass": "^4.13.0",
+		"node-sass": "^4.13.1",
 		"nodemon": "^2.0.2",
 		"npm-run-all": "^4.1.5",
 		"postcss-loader": "^3.0.0",
@@ -45,15 +45,23 @@
 		"redux-thunk": "^2.3.0",
 		"serialize-javascript": "^2.1.2",
 		"source-map-loader": "^0.2.4",
-		"style-loader": "^1.1.2",
-		"typescript": "^3.7.4",
+		"style-loader": "^1.1.3",
+		"typescript": "^3.7.5",
 		"webpack": "^4.41.5",
 		"webpack-cli": "^3.3.10",
 		"webpack-dev-server": "^3.10.1",
 		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
-		"tslint": "^5.15.0"
+		"@typescript-eslint/eslint-plugin": "^2.16.0",
+		"@typescript-eslint/parser": "^2.16.0",
+		"eslint": "^6.8.0",
+		"eslint-config-standard": "^14.1.0",
+		"eslint-plugin-import": "^2.20.0",
+		"eslint-plugin-node": "^11.0.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"eslint-plugin-react": "^7.18.0",
+		"eslint-plugin-standard": "^4.0.1"
 	},
 	"description": ""
 }
