--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"init": "npm i --save autoprefixer awesome-typescript-loader css-loader extract-loader file-loader node-sass postcss-loader source-map-loader style-loader typescript webpack webpack-cli webpack-dev-server @types/react @types/react-dom @types/react-redux react react-dom react-redux react-router-dom react-router-config redux redux-thunk axios es6-promise compression concurrently express express-http-proxy lodash nodemon npm-run-all react-helmet serialize-javascript",
+		"init": "node scripts/init",
 		"dev": "npm-run-all --parallel dev:server dev:*",
 		"dev:server": "nodemon --watch ./build --exec \"node ./build/bundle.js\"",
 		"dev:build-server": "webpack --config webpack.server.js --watch",
@@ -13,54 +13,54 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/express": "^4.17.2",
-		"@types/react": "^16.9.17",
-		"@types/react-dom": "^16.9.4",
-		"@types/react-redux": "^7.1.6",
-		"@types/react-router-dom": "^5.1.3",
+		"@types/express": "^4.17.6",
+		"@types/react": "^16.9.35",
+		"@types/react-dom": "^16.9.8",
+		"@types/react-redux": "^7.1.8",
+		"@types/react-router-dom": "^5.1.5",
 		"@types/redux-thunk": "^2.1.0",
-		"autoprefixer": "^9.7.4",
+		"autoprefixer": "^9.7.6",
 		"awesome-typescript-loader": "^5.2.1",
-		"axios": "^0.19.1",
+		"axios": "^0.19.2",
 		"compression": "^1.7.4",
-		"concurrently": "^5.0.2",
-		"css-loader": "^3.4.2",
+		"concurrently": "^5.2.0",
+		"css-loader": "^3.5.3",
 		"es6-promise": "^4.2.8",
 		"express": "^4.17.1",
 		"express-http-proxy": "^1.6.0",
-		"extract-loader": "^3.1.0",
-		"file-loader": "^5.0.2",
+		"extract-loader": "^5.0.1",
+		"file-loader": "^6.0.0",
 		"lodash": "^4.17.15",
-		"node-sass": "^4.13.1",
-		"nodemon": "^2.0.2",
+		"node-sass": "^4.14.1",
+		"nodemon": "^2.0.4",
 		"npm-run-all": "^4.1.5",
 		"postcss-loader": "^3.0.0",
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
-		"react-helmet": "^5.2.1",
-		"react-redux": "^7.1.3",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-helmet": "^6.0.0",
+		"react-redux": "^7.2.0",
 		"react-router-config": "^5.1.1",
-		"react-router-dom": "^5.1.2",
+		"react-router-dom": "^5.2.0",
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
-		"serialize-javascript": "^2.1.2",
+		"serialize-javascript": "^3.0.0",
 		"source-map-loader": "^0.2.4",
-		"style-loader": "^1.1.3",
-		"typescript": "^3.7.5",
-		"webpack": "^4.41.5",
-		"webpack-cli": "^3.3.10",
-		"webpack-dev-server": "^3.10.1",
+		"style-loader": "^1.2.1",
+		"typescript": "^3.9.2",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.11.0",
 		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^2.16.0",
-		"@typescript-eslint/parser": "^2.16.0",
-		"eslint": "^6.8.0",
-		"eslint-config-standard": "^14.1.0",
-		"eslint-plugin-import": "^2.20.0",
-		"eslint-plugin-node": "^11.0.0",
+		"@typescript-eslint/eslint-plugin": "^2.33.0",
+		"@typescript-eslint/parser": "^2.33.0",
+		"eslint": "^7.0.0",
+		"eslint-config-standard": "^14.1.1",
+		"eslint-plugin-import": "^2.20.2",
+		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-react": "^7.18.0",
+		"eslint-plugin-react": "^7.20.0",
 		"eslint-plugin-standard": "^4.0.1"
 	},
 	"description": ""
