--- a/server/package.json
+++ b/server/package.json
@@ -23,14 +23,12 @@
 		"awesome-typescript-loader": "^5.2.1",
 		"axios": "^0.19.2",
 		"compression": "^1.7.4",
-		"concurrently": "^5.2.0",
 		"css-loader": "^3.5.3",
 		"es6-promise": "^4.2.8",
 		"express": "^4.17.1",
 		"express-http-proxy": "^1.6.0",
 		"extract-loader": "^5.0.1",
 		"file-loader": "^6.0.0",
-		"lodash": "^4.17.15",
 		"node-sass": "^4.14.1",
 		"nodemon": "^2.0.4",
 		"npm-run-all": "^4.1.5",
@@ -43,13 +41,13 @@
 		"react-router-dom": "^5.2.0",
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
+		"sass-loader": "^8.0.2",
 		"serialize-javascript": "^3.0.0",
 		"source-map-loader": "^0.2.4",
 		"style-loader": "^1.2.1",
 		"typescript": "^3.9.2",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11",
-		"webpack-dev-server": "^3.11.0",
 		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
@@ -63,5 +61,11 @@
 		"eslint-plugin-react": "^7.20.0",
 		"eslint-plugin-standard": "^4.0.1"
 	},
-	"description": ""
+	"description": "",
+	"browserslist": [
+		"last 2 versions",
+		"ie >= 11",
+		"Android >= 9.0",
+		"ios >= 13"
+	]
 }
