--- a/server/package.json
+++ b/server/package.json
@@ -51,6 +51,7 @@
 		"webpack-node-externals": "^1.7.2"
 	},
 	"devDependencies": {
+		"@types/compression": "^1.7.0",
 		"@typescript-eslint/eslint-plugin": "^2.33.0",
 		"@typescript-eslint/parser": "^2.33.0",
 		"eslint": "^7.0.0",
