--- a/server/package.json
+++ b/server/package.json
@@ -52,6 +52,7 @@
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.0",
+		"@types/react-router-config": "^5.0.1",
 		"@typescript-eslint/eslint-plugin": "^2.33.0",
 		"@typescript-eslint/parser": "^2.33.0",
 		"eslint": "^7.0.0",
