--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,10 +8,12 @@
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": true
 	},
+	"editor.formatOnSave": false,
 	"eslint.options": {
 		"configFile": "./server/.eslintrc.js"
 	},
 	"javascript.preferences.quoteStyle": "double",
 	"typescript.preferences.quoteStyle": "double",
 	"editor.tabSize": 2,
+	"prettier.trailingComma": "all"
 }
