--- a/server/package.json
+++ b/server/package.json
@@ -52,6 +52,7 @@
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.0",
+		"@types/express-http-proxy": "^1.6.1",
 		"@types/react-router-config": "^5.0.1",
 		"@types/serialize-javascript": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^2.33.0",
