--- a/server/package.json
+++ b/server/package.json
@@ -53,6 +53,7 @@
 	"devDependencies": {
 		"@types/compression": "^1.7.0",
 		"@types/express-http-proxy": "^1.6.1",
+		"@types/react-helmet": "^6.0.0",
 		"@types/react-router-config": "^5.0.1",
 		"@types/serialize-javascript": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^2.34.0",
