--- a/package.json
+++ b/package.json
@@ -1,1 +1,82 @@
-{}
+{
+	"name": "ts-ssr-kit",
+	"version": "1.0.0",
+	"engines": {
+		"node": "14.x"
+	},
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"init": "node scripts/clean && node scripts/init",
+		"dev": "npm-run-all --parallel dev:server dev:*",
+		"dev:server": "nodemon --watch ./build --exec \"node ./build/bundle.js\"",
+		"dev:build-server": "webpack --config webpack.server.js --watch",
+		"dev:build-client": "webpack --config webpack.client.js --watch",
+		"start": "node build/bundle.js",
+		"build": "webpack --config webpack.client.js & webpack --config webpack.server.js",
+		"build:start": "webpack --config webpack.client.js && webpack --config webpack.server.js && node build/bundle.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@types/express": "^4.17.7",
+		"@types/react": "^16.9.44",
+		"@types/react-dom": "^16.9.8",
+		"@types/react-redux": "^7.1.9",
+		"@types/react-router-dom": "^5.1.5",
+		"@types/redux-thunk": "^2.1.0",
+		"autoprefixer": "^9.8.6",
+		"awesome-typescript-loader": "^5.2.1",
+		"axios": "^0.19.2",
+		"compression": "^1.7.4",
+		"css-loader": "^4.2.1",
+		"es6-promise": "^4.2.8",
+		"express": "^4.17.1",
+		"express-http-proxy": "^1.6.2",
+		"extract-loader": "^5.1.0",
+		"file-loader": "^6.0.0",
+		"node-sass": "^4.14.1",
+		"nodemon": "^2.0.4",
+		"npm-run-all": "^4.1.5",
+		"postcss-loader": "^3.0.0",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-helmet": "^6.1.0",
+		"react-redux": "^7.2.1",
+		"react-router-config": "^5.1.1",
+		"react-router-dom": "^5.2.0",
+		"redux": "^4.0.5",
+		"redux-thunk": "^2.3.0",
+		"sass-loader": "^9.0.3",
+		"serialize-javascript": "^4.0.0",
+		"source-map-loader": "^1.0.1",
+		"style-loader": "^1.2.1",
+		"typescript": "^3.9.7",
+		"webpack": "^4.44.1",
+		"webpack-cli": "^3.3.12",
+		"webpack-node-externals": "^2.5.0"
+	},
+	"devDependencies": {
+		"@types/compression": "^1.7.0",
+		"@types/express-http-proxy": "^1.6.1",
+		"@types/react-helmet": "^6.1.0",
+		"@types/react-router-config": "^5.0.1",
+		"@types/serialize-javascript": "^4.0.0",
+		"@typescript-eslint/eslint-plugin": "^3.8.0",
+		"@typescript-eslint/parser": "^3.8.0",
+		"eslint": "^7.6.0",
+		"eslint-config-standard": "^14.1.1",
+		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"eslint-plugin-react": "^7.20.5",
+		"eslint-plugin-standard": "^4.0.1"
+	},
+	"description": "",
+	"browserslist": [
+		"last 2 versions",
+		"ie >= 11",
+		"Android >= 9.0",
+		"ios >= 13"
+	]
+}
