update the build script

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"dev:build-server": "webpack --config webpack.server.js --watch",
 		"dev:build-client": "webpack --config webpack.client.js --watch",
 		"start": "node build/bundle.js",
-		"build": "webpack --config webpack.client.js & webpack --config webpack.server.js",
+		"build": "webpack --config webpack.client.js && webpack --config webpack.server.js",
 		"build:start": "webpack --config webpack.client.js && webpack --config webpack.server.js && node build/bundle.js"
 	},
 	"author": "",
