--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"engines": {
 		"node": "14.x"
 	},
-	"main": "index.js",
+	"main": "./build/bundle.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"init": "node scripts/clean && node scripts/init",
