--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"react-router-dom": "^5.2.0",
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
-		"serialize-javascript": "^4.0.0"
+		"serialize-javascript": "^4.0.0",
+		"tailwindcss": "^1.6.2"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.7",
