--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
 	},
 	"editor.formatOnSave": false,
 	"eslint.options": {
-		"configFile": "./server/.eslintrc.js"
+		"configFile": ".eslintrc.js"
 	},
 	"javascript.preferences.quoteStyle": "double",
 	"typescript.preferences.quoteStyle": "double",
