--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@tailwindcss/typography": "^0.2.0",
 		"awesome-typescript-loader": "^5.2.1",
 		"axios": "^0.19.2",
 		"compression": "^1.7.4",
