--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	"dependencies": {
 		"@tailwindcss/typography": "^0.2.0",
 		"awesome-typescript-loader": "^5.2.1",
-		"axios": "^0.19.2",
+		"axios": "^0.20.0",
 		"compression": "^1.7.4",
 		"es6-promise": "^4.2.8",
 		"express": "^4.17.1",
@@ -34,14 +34,14 @@
 		"react-router-dom": "^5.2.0",
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
-		"serialize-javascript": "^4.0.0",
-		"tailwindcss": "^1.7.3"
+		"serialize-javascript": "^5.0.1",
+		"tailwindcss": "^1.8.10"
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.0",
-		"@types/express": "^4.17.7",
+		"@types/express": "^4.17.8",
 		"@types/express-http-proxy": "^1.6.1",
-		"@types/react": "^16.9.46",
+		"@types/react": "^16.9.49",
 		"@types/react-dom": "^16.9.8",
 		"@types/react-helmet": "^6.1.0",
 		"@types/react-redux": "^7.1.9",
@@ -49,30 +49,31 @@
 		"@types/react-router-dom": "^5.1.5",
 		"@types/redux-thunk": "^2.1.0",
 		"@types/serialize-javascript": "^4.0.0",
-		"@typescript-eslint/eslint-plugin": "^3.9.1",
-		"@typescript-eslint/parser": "^3.9.1",
-		"autoprefixer": "^9.8.6",
-		"css-loader": "^4.2.1",
-		"eslint": "^7.7.0",
+		"@typescript-eslint/eslint-plugin": "^4.3.0",
+		"@typescript-eslint/parser": "^4.3.0",
+		"autoprefixer": "^10.0.1",
+		"css-loader": "^4.3.0",
+		"eslint": "^7.10.0",
 		"eslint-config-standard": "^14.1.1",
-		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-react": "^7.20.6",
+		"eslint-plugin-react": "^7.21.2",
 		"eslint-plugin-standard": "^4.0.1",
 		"extract-loader": "^5.1.0",
-		"file-loader": "^6.0.0",
+		"file-loader": "^6.1.0",
 		"node-sass": "^4.14.1",
 		"nodemon": "^2.0.4",
 		"npm-run-all": "^4.1.5",
-		"postcss-loader": "^3.0.0",
-		"sass-loader": "^9.0.3",
-		"source-map-loader": "^1.0.2",
+		"postcss": "^8.1.1",
+		"postcss-loader": "^4.0.2",
+		"sass-loader": "^10.0.2",
+		"source-map-loader": "^1.1.0",
 		"style-loader": "^1.2.1",
-		"typescript": "^4.0.2",
-		"webpack": "^4.44.1",
+		"typescript": "^4.0.3",
+		"webpack": "^4.44.2",
 		"webpack-cli": "^3.3.12",
-		"webpack-node-externals": "^2.5.1"
+		"webpack-node-externals": "^2.5.2"
 	},
 	"description": "",
 	"browserslist": [
