--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"awesome-typescript-loader": "^5.2.1",
 		"axios": "^0.20.0",
 		"compression": "^1.7.4",
+		"d3": "^6.2.0",
 		"es6-promise": "^4.2.8",
 		"express": "^4.17.1",
 		"express-http-proxy": "^1.6.2",
@@ -39,9 +40,10 @@
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.0",
+		"@types/d3": "^5.16.2",
 		"@types/express": "^4.17.8",
 		"@types/express-http-proxy": "^1.6.1",
-		"@types/react": "^16.9.49",
+		"@types/react": "^16.9.50",
 		"@types/react-dom": "^16.9.8",
 		"@types/react-helmet": "^6.1.0",
 		"@types/react-redux": "^7.1.9",
@@ -58,7 +60,7 @@
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-react": "^7.21.2",
+		"eslint-plugin-react": "^7.21.3",
 		"eslint-plugin-standard": "^4.0.1",
 		"extract-loader": "^5.1.0",
 		"file-loader": "^6.1.0",
@@ -66,10 +68,10 @@
 		"nodemon": "^2.0.4",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.1.1",
-		"postcss-loader": "^4.0.2",
+		"postcss-loader": "^4.0.3",
 		"sass-loader": "^10.0.2",
 		"source-map-loader": "^1.1.0",
-		"style-loader": "^1.2.1",
+		"style-loader": "^1.3.0",
 		"typescript": "^4.0.3",
 		"webpack": "^4.44.2",
 		"webpack-cli": "^3.3.12",
