--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
 	"license": "ISC",
 	"dependencies": {
 		"@tailwindcss/typography": "^0.2.0",
-		"awesome-typescript-loader": "^5.2.1",
-		"axios": "^0.20.0",
+		"axios": "^0.21.0",
 		"compression": "^1.7.4",
 		"d3": "^6.2.0",
 		"es6-promise": "^4.2.8",
 		"express": "^4.17.1",
 		"express-http-proxy": "^1.6.2",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
 		"react-helmet": "^6.1.0",
 		"react-redux": "^7.2.1",
 		"react-router-config": "^5.1.1",
@@ -40,7 +39,7 @@
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.0",
-		"@types/d3": "^5.16.3",
+		"@types/d3": "^6.1.0",
 		"@types/express": "^4.17.8",
 		"@types/express-http-proxy": "^1.6.1",
 		"@types/react": "^16.9.52",
@@ -54,9 +53,9 @@
 		"@typescript-eslint/eslint-plugin": "^4.4.1",
 		"@typescript-eslint/parser": "^4.4.1",
 		"autoprefixer": "^10.0.1",
-		"css-loader": "^4.3.0",
+		"css-loader": "^5.0.1",
 		"eslint": "^7.11.0",
-		"eslint-config-standard": "^14.1.1",
+		"eslint-config-standard": "^16.0.1",
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
@@ -64,15 +63,16 @@
 		"eslint-plugin-standard": "^4.0.1",
 		"extract-loader": "^5.1.0",
 		"file-loader": "^6.1.1",
-		"node-sass": "^4.14.1",
+		"node-sass": "^5.0.0",
 		"nodemon": "^2.0.4",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.1.1",
 		"postcss-loader": "^4.0.4",
-		"sass-loader": "^10.0.3",
+		"sass-loader": "^10.1.0",
 		"source-map-loader": "^1.1.1",
 		"style-loader": "^2.0.0",
-		"typescript": "^4.0.3",
+		"ts-loader": "^8.0.11",
+		"typescript": "^4.0.5",
 		"webpack": "^5.0.0",
 		"webpack-cli": "^4.0.0",
 		"webpack-node-externals": "^2.5.2"
