--- a/package.json
+++ b/package.json
@@ -21,20 +21,20 @@
 		"@tailwindcss/typography": "^0.4.0",
 		"axios": "^0.21.0",
 		"compression": "^1.7.4",
-		"d3": "^6.2.0",
+		"d3": "^6.6.2",
 		"es6-promise": "^4.2.8",
 		"express": "^4.17.1",
 		"express-http-proxy": "^1.6.2",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
-		"react-redux": "^7.2.1",
+		"react-redux": "^7.2.3",
 		"react-router-config": "^5.1.1",
 		"react-router-dom": "^5.2.0",
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
 		"serialize-javascript": "^5.0.1",
-		"tailwindcss": "^2.0.3"
+		"tailwindcss": "^2.1.1"
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.0",
@@ -42,37 +42,37 @@
 		"@types/express": "^4.17.8",
 		"@types/express-http-proxy": "^1.6.1",
 		"@types/react": "^17.0.0",
-		"@types/react-dom": "^17.0.0",
+		"@types/react-dom": "^17.0.3",
 		"@types/react-helmet": "^6.1.0",
 		"@types/react-redux": "^7.1.9",
 		"@types/react-router-config": "^5.0.1",
 		"@types/react-router-dom": "^5.1.6",
 		"@types/redux-thunk": "^2.1.0",
 		"@types/serialize-javascript": "^5.0.0",
-		"@typescript-eslint/eslint-plugin": "^4.4.1",
-		"@typescript-eslint/parser": "^4.4.1",
+		"@typescript-eslint/eslint-plugin": "^4.21.0",
+		"@typescript-eslint/parser": "^4.21.0",
 		"autoprefixer": "^10.0.1",
-		"css-loader": "^5.0.1",
-		"eslint": "^7.11.0",
+		"css-loader": "^5.2.0",
+		"eslint": "^7.23.0",
 		"eslint-config-standard": "^16.0.1",
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-react": "^7.21.4",
+		"eslint-plugin-react": "^7.23.1",
 		"extract-loader": "^5.1.0",
 		"file-loader": "^6.1.1",
-		"node-sass": "^5.0.0",
 		"nodemon": "^2.0.4",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.1.1",
-		"postcss-loader": "^5.0.0",
+		"postcss": "^8.2.9",
+		"postcss-loader": "^5.2.0",
+		"sass": "^1.32.8",
 		"sass-loader": "^11.0.1",
 		"source-map-loader": "^2.0.0",
 		"style-loader": "^2.0.0",
-		"ts-loader": "^8.0.11",
+		"ts-loader": "^8.1.0",
 		"typescript": "^4.0.5",
-		"webpack": "^5.0.0",
-		"webpack-cli": "^4.0.0",
+		"webpack": "^5.30.0",
+		"webpack-cli": "^4.6.0",
 		"webpack-node-externals": "^2.5.2"
 	},
 	"description": "",
