--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "npm-run-all --parallel dev:server dev:*",
-		"dev:server": "nodemon --watch ./build --exec \"node ./build/bundle.js\"",
-		"dev:build-server": "webpack --config webpack.server.js --mode development --watch",
+		"dev:server": "nodemon --watch ./src --ext 'ts,json' --exec \"npx ts-node ./src/server.tsx\"",
 		"dev:build-client": "webpack --config webpack.client.js --mode development --watch",
 		"start": "node build/bundle.js",
 		"build": "webpack --config webpack.client.js --mode production && webpack --config webpack.server.js --mode production",
@@ -34,12 +33,13 @@
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
 		"serialize-javascript": "^5.0.1",
-		"tailwindcss": "^2.1.1"
+		"tailwindcss": "^2.1.1",
+		"ts-node": "^9.1.1"
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.0",
 		"@types/d3": "^6.1.0",
-		"@types/express": "^4.17.8",
+		"@types/express": "^4.17.11",
 		"@types/express-http-proxy": "^1.6.1",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.3",
@@ -70,8 +70,8 @@
 		"source-map-loader": "^2.0.0",
 		"style-loader": "^2.0.0",
 		"ts-loader": "^8.1.0",
-		"typescript": "^4.0.5",
-		"webpack": "^5.30.0",
+		"typescript": "^4.2.4",
+		"webpack": "^5.31.0",
 		"webpack-cli": "^4.6.0",
 		"webpack-node-externals": "^2.5.2"
 	},
