--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,12 @@
 {
-	"awesomeTypescriptLoaderOptions": {
-		"useWebpackText": true,
-		"useTranspileModule": true,
-		"doTypeCheck": true,
-		"forkChecker": true
-	},
 	"compilerOptions": {
-		"outDir": "./dist/",
 		"lib": ["es5", "es6", "dom"],
 		"sourceMap": true,
 		"noImplicitAny": true,
 		"module": "commonjs",
 		"target": "es5",
-		"jsx": "react"
+		"jsx": "react",
+		"esModuleInterop": true
 	},
 	"include": ["./src/*"],
 	"exclude": ["node_modules"]
