--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"lib": ["es5", "es6", "dom"],
 		"sourceMap": true,
-		"noImplicitAny": false,
+		"noImplicitAny": true,
 		"module": "commonjs",
 		"target": "es5",
 		"jsx": "react",
