--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"build:start": "npm run build && npm start"
 	},
 	"author": "",
-	"license": "ISC",
+	"license": "MIT",
 	"dependencies": {
 		"@tailwindcss/typography": "^0.4.0",
 		"axios": "^0.21.0",
@@ -69,11 +69,11 @@
 		"sass-loader": "^11.0.1",
 		"source-map-loader": "^2.0.0",
 		"style-loader": "^2.0.0",
-		"ts-loader": "^8.1.0",
+		"ts-loader": "^9.1.2",
 		"typescript": "^4.2.4",
 		"webpack": "^5.31.0",
 		"webpack-cli": "^4.6.0",
-		"webpack-node-externals": "^2.5.2"
+		"webpack-node-externals": "^3.0.0"
 	},
 	"description": "",
 	"browserslist": [
