--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "npm-run-all --parallel dev:server dev:*",
-		"dev:server": "nodemon --watch ./src --ext 'ts,json' --exec \"npx ts-node ./src/server.tsx\"",
+		"dev:server": "nodemon --watch ./src --ext 'ts,json' --exec \"webpack --config webpack.server.js --mode development && node build/bundle.js\"",
 		"dev:build-client": "webpack --config webpack.client.js --mode development --watch",
 		"start": "node build/bundle.js",
 		"build": "webpack --config webpack.client.js --mode production && webpack --config webpack.server.js --mode production",
@@ -17,6 +17,7 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"@tailwindcss/forms": "^0.3.2",
 		"@tailwindcss/typography": "^0.4.0",
 		"axios": "^0.21.0",
 		"compression": "^1.7.4",
@@ -33,8 +34,7 @@
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
 		"serialize-javascript": "^5.0.1",
-		"tailwindcss": "^2.1.1",
-		"ts-node": "^10.0.0"
+		"tailwindcss": "^2.1.1"
 	},
 	"devDependencies": {
 		"@types/compression": "^1.7.0",
