--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"es6-promise": "^4.2.8",
 		"express": "^4.17.1",
 		"express-http-proxy": "^1.6.2",
+		"graphql-ws": "^5.3.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
