--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "ts-ssr-kit",
 	"version": "1.0.0",
 	"engines": {
-		"node": "16.x"
+		"node": "17.x"
 	},
 	"main": "./build/bundle.js",
 	"scripts": {
@@ -19,7 +19,7 @@
 	"dependencies": {
 		"@tailwindcss/forms": "^0.3.3",
 		"@tailwindcss/typography": "^0.4.0",
-		"axios": "^0.21.0",
+		"axios": "^0.24.0",
 		"compression": "^1.7.4",
 		"d3": "^6.7.0",
 		"es6-promise": "^4.2.8",
@@ -31,7 +31,7 @@
 		"react-helmet": "^6.1.0",
 		"react-redux": "^7.2.3",
 		"react-router-config": "^5.1.1",
-		"react-router-dom": "^5.2.0",
+		"react-router-dom": "^6.0.1",
 		"redux": "^4.0.5",
 		"redux-thunk": "^2.3.0",
 		"serialize-javascript": "^6.0.0",
@@ -50,16 +50,17 @@
 		"@types/react-router-dom": "^5.1.6",
 		"@types/redux-thunk": "^2.1.0",
 		"@types/serialize-javascript": "^5.0.0",
-		"@typescript-eslint/eslint-plugin": "^4.28.2",
-		"@typescript-eslint/parser": "^4.28.2",
+		"@typescript-eslint/eslint-plugin": "^5.3.0",
+		"@typescript-eslint/parser": "^5.3.0",
 		"autoprefixer": "^10.0.1",
-		"css-loader": "^5.2.0",
-		"eslint": "^7.30.0",
-		"eslint-config-standard": "^16.0.1",
-		"eslint-plugin-import": "^2.22.1",
+		"css-loader": "^6.5.1",
+		"esbuild-loader": "^2.16.0",
+		"eslint": "^7.32.0",
+		"eslint-config-standard": "^16.0.3",
+		"eslint-plugin-import": "^2.25.2",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-promise": "^5.1.0",
-		"eslint-plugin-react": "^7.23.1",
+		"eslint-plugin-promise": "^5.1.1",
+		"eslint-plugin-react": "^7.26.1",
 		"extract-loader": "^5.1.0",
 		"file-loader": "^6.1.1",
 		"nodemon": "^2.0.9",
