--- a/package.json
+++ b/package.json
@@ -17,71 +17,50 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
-		"@tailwindcss/forms": "^0.3.3",
-		"@tailwindcss/typography": "^0.4.0",
 		"axios": "^0.24.0",
 		"compression": "^1.7.4",
-		"d3": "^6.7.0",
-		"es6-promise": "^4.2.8",
+		"d3": "^7.1.1",
 		"express": "^4.17.1",
-		"express-http-proxy": "^1.6.2",
-		"graphql-ws": "^5.3.0",
+		"graphql-ws": "^5.5.5",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
-		"react-redux": "^7.2.3",
-		"react-router-config": "^5.1.1",
-		"react-router-dom": "^6.0.1",
-		"redux": "^4.0.5",
-		"redux-thunk": "^2.3.0",
-		"serialize-javascript": "^6.0.0",
-		"tailwindcss": "^2.2.4"
+		"react-router-dom": "^6.0.2",
+		"serialize-javascript": "^6.0.0"
 	},
 	"devDependencies": {
-		"@types/compression": "^1.7.0",
-		"@types/d3": "^6.7.0",
-		"@types/express": "^4.17.11",
-		"@types/express-http-proxy": "^1.6.1",
-		"@types/react": "^17.0.13",
-		"@types/react-dom": "^17.0.8",
-		"@types/react-helmet": "^6.1.0",
-		"@types/react-redux": "^7.1.9",
-		"@types/react-router-config": "^5.0.1",
-		"@types/react-router-dom": "^5.1.6",
-		"@types/redux-thunk": "^2.1.0",
-		"@types/serialize-javascript": "^5.0.0",
-		"@typescript-eslint/eslint-plugin": "^5.3.0",
-		"@typescript-eslint/parser": "^5.3.0",
-		"autoprefixer": "^10.0.1",
-		"css-loader": "^6.5.1",
+		"@swc/core": "^1.2.108",
+		"@types/compression": "^1.7.2",
+		"@types/d3": "^7.1.0",
+		"@types/express": "^4.17.13",
+		"@types/react": "^17.0.34",
+		"@types/react-dom": "^17.0.11",
+		"@types/react-helmet": "^6.1.4",
+		"@types/react-router-dom": "^5.3.2",
+		"@types/serialize-javascript": "^5.0.1",
+		"@typescript-eslint/eslint-plugin": "^5.3.1",
+		"@typescript-eslint/parser": "^5.3.1",
 		"esbuild-loader": "^2.16.0",
 		"eslint": "^7.32.0",
 		"eslint-config-standard": "^16.0.3",
-		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-import": "^2.25.3",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^5.1.1",
-		"eslint-plugin-react": "^7.26.1",
-		"extract-loader": "^5.1.0",
-		"file-loader": "^6.1.1",
+		"eslint-plugin-react": "^7.27.0",
 		"nodemon": "^2.0.9",
 		"npm-run-all": "^4.1.5",
-		"postcss": "^8.3.5",
-		"postcss-loader": "^6.1.1",
-		"sass": "^1.35.1",
-		"sass-loader": "^12.1.0",
 		"source-map-loader": "^3.0.0",
-		"style-loader": "^3.0.0",
-		"ts-loader": "^9.1.2",
-		"typescript": "^4.3.5",
-		"webpack": "^5.47.1",
-		"webpack-cli": "^4.6.0",
+		"swc-loader": "^0.1.15",
+		"ts-loader": "^9.2.6",
+		"typescript": "^4.4.4",
+		"webpack": "^5.64.0",
+		"webpack-cli": "^4.9.1",
 		"webpack-node-externals": "^3.0.0"
 	},
 	"description": "",
 	"browserslist": [
 		"last 2 versions",
-		"ie >= 11",
-		"Android >= 9.0",
-		"ios >= 13"
+		"Android >= 10.0",
+		"ios >= 14"
 	]
 }
