--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@types/serialize-javascript": "^5.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.3.1",
 		"@typescript-eslint/parser": "^5.3.1",
+		"css-loader": "^6.5.1",
 		"esbuild-loader": "^2.16.0",
 		"eslint": "^7.32.0",
 		"eslint-config-standard": "^16.0.3",
@@ -47,9 +48,13 @@
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^5.1.1",
 		"eslint-plugin-react": "^7.27.0",
+		"mini-css-extract-plugin": "^2.4.4",
 		"nodemon": "^2.0.9",
 		"npm-run-all": "^4.1.5",
+		"sass": "^1.43.4",
+		"sass-loader": "^12.3.0",
 		"source-map-loader": "^3.0.0",
+		"style-loader": "^3.3.1",
 		"swc-loader": "^0.1.15",
 		"ts-loader": "^9.2.6",
 		"typescript": "^4.4.4",
