--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
 		"dev": "npm-run-all --parallel dev:server dev:*",
 		"dev:server": "nodemon --watch ./src/** -e ts,json,tsx --exec \"npx webpack --config webpack.server.js --mode development && node build/bundle.js\" --MODE=dev",
 		"dev:build-client": "webpack --config webpack.client.js --mode development --watch",
+		"dev:tailwind": "npx tailwindcss -o public/tailwind.css --watch",
 		"start": "node build/bundle.js",
-		"build": "webpack --config webpack.client.js --mode production && webpack --config webpack.server.js --mode production",
+		"build": "webpack --config webpack.client.js --mode production && webpack --config webpack.server.js --mode production && npx tailwindcss -o public/tailwind.css --minify",
 		"build:start": "npm run build && npm start"
 	},
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"@tailwindcss/forms": "^0.3.4",
+		"@tailwindcss/typography": "^0.4.1",
 		"axios": "^0.24.0",
 		"compression": "^1.7.4",
 		"d3": "^7.1.1",
@@ -26,7 +29,8 @@
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
 		"react-router-dom": "^6.0.2",
-		"serialize-javascript": "^6.0.0"
+		"serialize-javascript": "^6.0.0",
+		"tailwindcss": "^2.2.19"
 	},
 	"devDependencies": {
 		"@swc/core": "^1.2.108",
@@ -38,8 +42,8 @@
 		"@types/react-helmet": "^6.1.4",
 		"@types/react-router-dom": "^5.3.2",
 		"@types/serialize-javascript": "^5.0.1",
-		"@typescript-eslint/eslint-plugin": "^5.3.1",
-		"@typescript-eslint/parser": "^5.3.1",
+		"@typescript-eslint/eslint-plugin": "^5.4.0",
+		"@typescript-eslint/parser": "^5.4.0",
 		"css-loader": "^6.5.1",
 		"esbuild-loader": "^2.16.0",
 		"eslint": "^7.32.0",
@@ -47,10 +51,11 @@
 		"eslint-plugin-import": "^2.25.3",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-promise": "^5.1.1",
-		"eslint-plugin-react": "^7.27.0",
+		"eslint-plugin-react": "^7.27.1",
 		"mini-css-extract-plugin": "^2.4.4",
 		"nodemon": "^2.0.9",
 		"npm-run-all": "^4.1.5",
+		"postcss-loader": "^6.2.0",
 		"sass": "^1.43.4",
 		"sass-loader": "^12.3.0",
 		"source-map-loader": "^3.0.0",
