--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"main": "./build/bundle.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "npm-run-all --parallel dev:server dev:*",
+		"dev": "concurrently --kill-others \"npm run dev:server\" \"npm run dev:build-client\" \"npm run dev:tailwind\"",
 		"dev:server": "nodemon --watch ./src/** -e ts,json,tsx --exec \"npx webpack --config webpack.server.js --mode development && node build/bundle.js\" --MODE=dev",
 		"dev:build-client": "webpack --config webpack.client.js --mode development --watch",
 		"dev:tailwind": "npx tailwindcss -o public/tailwind.css --watch",
@@ -44,6 +44,7 @@
 		"@types/serialize-javascript": "^5.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.4.0",
 		"@typescript-eslint/parser": "^5.4.0",
+		"concurrently": "^6.4.0",
 		"css-loader": "^6.5.1",
 		"esbuild-loader": "^2.16.0",
 		"eslint": "^7.32.0",
@@ -54,7 +55,6 @@
 		"eslint-plugin-react": "^7.27.1",
 		"mini-css-extract-plugin": "^2.4.4",
 		"nodemon": "^2.0.9",
-		"npm-run-all": "^4.1.5",
 		"postcss-loader": "^6.2.0",
 		"sass": "^1.43.4",
 		"sass-loader": "^12.3.0",
