--- a/package.json
+++ b/package.json
@@ -18,24 +18,26 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
-		"@tailwindcss/forms": "^0.3.4",
-		"@tailwindcss/typography": "^0.4.1",
-		"axios": "^0.24.0",
+		"@nivo/calendar": "^0.79.1",
+		"@nivo/core": "^0.79.0",
+		"@nivo/line": "^0.79.1",
+		"@tailwindcss/forms": "^0.4.0",
+		"@tailwindcss/typography": "^0.5.0",
+		"axios": "^0.25.0",
 		"compression": "^1.7.4",
-		"d3": "^7.1.1",
 		"express": "^4.17.1",
+		"graphql-request": "^3.7.0",
 		"graphql-ws": "^5.5.5",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-helmet": "^6.1.0",
 		"react-router-dom": "^6.0.2",
 		"serialize-javascript": "^6.0.0",
-		"tailwindcss": "^2.2.19"
+		"tailwindcss": "^3.0.1"
 	},
 	"devDependencies": {
 		"@swc/core": "^1.2.108",
 		"@types/compression": "^1.7.2",
-		"@types/d3": "^7.1.0",
 		"@types/express": "^4.17.13",
 		"@types/react": "^17.0.34",
 		"@types/react-dom": "^17.0.11",
@@ -44,7 +46,7 @@
 		"@types/serialize-javascript": "^5.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.4.0",
 		"@typescript-eslint/parser": "^5.4.0",
-		"concurrently": "^6.4.0",
+		"concurrently": "^7.0.0",
 		"css-loader": "^6.5.1",
 		"esbuild-loader": "^2.16.0",
 		"eslint": "^7.32.0",
